# Brobot

./: .gitignore  README.md  example_face_blinking.py  pyproject.toml  run_emulator.sh  run_emulator_voice.sh
.github/workflows/: ci.yml
brobot/: __init__.py  __main__.py  display.py  emotions.py  face.py
brobot/voice/: __init__.py  brain.py  io.py  memory.py  workers.py
